udpate claude partial